--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ footer {
 </head>
 <body>
   <header>
-    <img src="assets/endesa-logo.png" alt="Endesa">
+    <img src=\"assets/endesa-logo-novo.jpg\" alt="Endesa">
     <nav>
       <a href="#planos">Planos</a>
       <a href="#simulador">Simulador</a>
