--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
       --branco: #ffffff;
       --texto: #333333;
     }body {
-  font-family: Arial, sans-serif;
-  background: var(--cinza-claro);
-  margin: 0;
-  color: var(--texto);
-}
+
+font-family: Arial, sans-serif; background: linear-gradient(to bottom, #eaf4fb, #ffffff); margin: 0; color: #333; }
 
 header {
   background: var(--branco);
